@@ -530,7 +530,8 @@ ACE_Select_Reactor_Handler_Repository::dump (void) const
 ACE_ALLOC_HOOK_DEFINE(ACE_Select_Reactor_Handler_Repository_Iterator)
 
 ACE_Select_Reactor_Notify::ACE_Select_Reactor_Notify (void)
-  : max_notify_iterations_ (-1)
+  : select_reactor_ (0)
+  , max_notify_iterations_ (-1)
 {
 }
 
